--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!----------- Font Awesome Kit --------------->
     <script src="https://kit.fontawesome.com/2babe836e0.js" crossorigin="anonymous"></script>
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/Css/style.css">
-    <link rel="stylesheet" href="/Css/mobile.css">
-    <link rel="stylesheet" href="/Css/tablet.css" .css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="tablet.css">
 </head>
 
 <body>
