--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <button class="btn">Prebook Now <i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="front-news-img">
-            <img src="/Photo/images/main-camera.png" alt="">
+            <img src="Photo/images/main-camera.png" alt="">
         </div>
     </section>
 
@@ -62,13 +62,13 @@
     <section class="company">
         <hr class="company-hr">
         <ul class="company-list">
-            <li><img src="/Photo/logos/Alibaba.svg" alt=""></li>
-            <li><img src="/Photo/logos/Amazon.svg" alt=""></li>
-            <li><img src="/Photo/logos/Daraz.pk Logo.svg" alt=""></li>
-            <li><img src="/Photo/logos/Ebay.svg" alt=""></li>
-            <li><img src="/Photo/logos/Rakuten.svg" alt=""></li>
-            <li><img src="/Photo/logos/Target.svg" alt=""></li>
-            <li><img src="/Photo/logos/Walmart.svg" alt=""></li>
+            <li><img src="Photo/logos/Alibaba.svg" alt=""></li>
+            <li><img src="Photo/logos/Amazon.svg" alt=""></li>
+            <li><img src="Photo/logos/Daraz.pk Logo.svg" alt=""></li>
+            <li><img src="Photo/logos/Ebay.svg" alt=""></li>
+            <li><img src="Photo/logos/Rakuten.svg" alt=""></li>
+            <li><img src="Photo/logos/Target.svg" alt=""></li>
+            <li><img src="Photo/logos/Walmart.svg" alt=""></li>
         </ul>
         <hr class="company-hr">
     </section>
@@ -83,7 +83,7 @@
         <section class="popular-collection">
             <h1>Popular Collection</h1>
             <div class="collections">
-                <div class="collection"><img src="/Photo/images/tripod.png" alt="">
+                <div class="collection"><img src="Photo/images/tripod.png" alt="">
 
                     <h2>Flex Tripod</h2>
                     <h3>$980.25</h3>
@@ -101,7 +101,7 @@
                     <p> Buyers protection possible!</p>
 
                 </div>
-                <div class="collection"><img src="/Photo/images/mic.png" alt="">
+                <div class="collection"><img src="Photo/images/mic.png" alt="">
                     <h2>Microphone</h2>
                     <h3>$120.25</h3>
                     <ul>
@@ -117,7 +117,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/airpod.png" alt="">
+                <div class="collection"><img src="Photo/images/airpod.png" alt="">
                     <h2>Airbuds</h2>
                     <h3>$100.00</h3>
                     <ul>
@@ -133,7 +133,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/drone.png" alt="">
+                <div class="collection"><img src="Photo/images/drone.png" alt="">
                     <h2>Drone</h2>
                     <h3>$980.25</h3>
                     <ul>
@@ -149,7 +149,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/lights.png" alt="">
+                <div class="collection"><img src="Photo/images/lights.png" alt="">
                     <h2>Light Setup</h2>
                     <h3>$1200.00</h3>
                     <ul>
@@ -165,7 +165,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/setup.png" alt="">
+                <div class="collection"><img src="Photo/images/setup.png" alt="">
                     <h2>Photoshoot Set</h2>
                     <h3>$820.40</h3>
                     <ul>
@@ -181,7 +181,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/camera.png" alt="">
+                <div class="collection"><img src="Photo/images/camera.png" alt="">
                     <h2>Vlogging Camera</h2>
                     <h3>$1980.25</h3>
                     <ul>
@@ -197,7 +197,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/single-light.png" alt="">
+                <div class="collection"><img src="Photo/images/single-light.png" alt="">
                     <h2>Green Screen</h2>
                     <h3>$30.25</h3>
                     <ul>
@@ -213,7 +213,7 @@
                     <p>Wordwide shifting available</p>
                     <p> Buyers protection possible!</p>
                 </div>
-                <div class="collection"><img src="/Photo/images/action.png" alt="">
+                <div class="collection"><img src="Photo/images/action.png" alt="">
                     <h2>Action Camera</h2>
                     <h3>$380.00</h3>
                     <ul>
@@ -249,7 +249,7 @@
         ------------------->
     <section class="other-site">
         <div class="other-site-img">
-            <img src="/Photo/build.png" alt="">
+            <img src="Photo/build.png" alt="">
         </div>
         <div class="other-site-detail">
             <h2>Start your building plan with us</h2>
