--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!---------------------
          Company Section Start
      ---------------------->
-    <section class="company">
+    <!-- <section class="company">
         <hr class="company-hr">
         <ul class="company-list">
             <li><img src="Photo/logos/Alibaba.svg" alt=""></li>
@@ -71,7 +71,7 @@
             <li><img src="Photo/logos/Walmart.svg" alt=""></li>
         </ul>
         <hr class="company-hr">
-    </section>
+    </section> -->
     <!---------------------
          Company Section End
      ---------------------->
